# Searh-NEIRO

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_LOG_UPDATE_measurement_core_v1.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: providers.yaml
docs/: BATCH_WORKFLOW.md  DATA_GOVERNANCE.md  GITHUB_BENCHMARK.md  IDEA_BACKLOG.md  IMPLEMENTATION_CHECKLIST.md  MASS_TEST.md  MEASUREMENT_CORE.md  NO_API_KEYS.md  ROADMAP.md  RUN_WINDOWS.md  SITE_SNAPSHOT_AUDIT.md  UI_WORKFLOW.md
inputs/: prompts.txt
src/neirosearch/: __init__.py  analyzer.py  browser_cli.py  cli.py  config.py  depth_scan.py  manual.py  measurement_cli.py  models.py  openserp.py  prompts.py  providers.py  reports.py  statistics_view.py  task_status.py  ui_app.py
src/neirosearch/browser/: __init__.py  combinator.py
src/neirosearch/measurement/: __init__.py  evidence.py  importer.py  models.py  normalize.py  store.py
src/neirosearch/pages/: 07_Статистика.py
tests/: test_analyzer_candidates.py  test_browser_queue.py  test_depth_scan.py  test_measurement_importer.py  test_measurement_models.py  test_measurement_store.py  test_reports_security.py  test_ui_smoke.py
